<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="WheelyApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAd-33-eyp">
                                <rect key="frame" x="0.0" y="44" width="414" height="820"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3t-a9-OmR">
                                        <rect key="frame" x="339" y="8" width="67" height="56"/>
                                        <color key="backgroundColor" red="0.3425145745" green="0.1302860975" blue="0.0351851657" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="56" id="hnR-B9-NZV"/>
                                            <constraint firstAttribute="width" constant="67" id="oWc-qB-WXT"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <state key="normal" title="Add">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="didAddSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i6l-A9-hnD"/>
                                        </connections>
                                    </button>
                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PB3-B1-e8w">
                                        <rect key="frame" x="0.0" y="72" width="414" height="684"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <prototypes>
                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="optionCell" rowHeight="59" id="aUr-fu-8MT" customClass="OptionTableViewCell" customModule="WheelyApp" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="28" width="414" height="59"/>
                                                <autoresizingMask key="autoresizingMask"/>
                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aUr-fu-8MT" id="jzC-mB-b2i">
                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="59"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your Option" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RQB-g6-PQc">
                                                            <rect key="frame" x="33" y="11" width="320" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="optionTextField"/>
                                                            <color key="textColor" red="0.3425145745" green="0.1302860975" blue="0.0351851657" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="go"/>
                                                        </textField>
                                                    </subviews>
                                                    <constraints>
                                                        <constraint firstAttribute="trailing" secondItem="RQB-g6-PQc" secondAttribute="trailing" constant="61" id="P3D-Hw-m5Z"/>
                                                        <constraint firstItem="RQB-g6-PQc" firstAttribute="leading" secondItem="jzC-mB-b2i" secondAttribute="leading" constant="33" id="e2y-1C-Iwq"/>
                                                        <constraint firstAttribute="bottom" secondItem="RQB-g6-PQc" secondAttribute="bottom" constant="14" id="pqz-Sg-Tdq"/>
                                                        <constraint firstItem="RQB-g6-PQc" firstAttribute="top" secondItem="jzC-mB-b2i" secondAttribute="top" constant="11" id="zZY-cd-onb"/>
                                                    </constraints>
                                                </tableViewCellContentView>
                                                <connections>
                                                    <outlet property="optionTextField" destination="RQB-g6-PQc" id="XCM-gb-dS6"/>
                                                </connections>
                                            </tableViewCell>
                                        </prototypes>
                                    </tableView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xg1-JQ-221">
                                        <rect key="frame" x="8" y="764" width="398" height="56"/>
                                        <color key="backgroundColor" red="0.3425145745" green="0.1302860975" blue="0.0351851657" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="56" id="wbF-52-MV6"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                        <state key="normal" title="Next">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="41S-i6-0pa" kind="show" identifier="showWheelSegue" id="W3N-1c-cbu"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="Xg1-JQ-221" firstAttribute="leading" secondItem="NAd-33-eyp" secondAttribute="leading" constant="8" id="0RH-ui-9Dp"/>
                                    <constraint firstAttribute="trailing" secondItem="Xg1-JQ-221" secondAttribute="trailing" constant="8" id="7ZB-H7-gQ1"/>
                                    <constraint firstAttribute="trailing" secondItem="o3t-a9-OmR" secondAttribute="trailing" constant="8" id="Dau-vO-mE1"/>
                                    <constraint firstAttribute="bottom" secondItem="Xg1-JQ-221" secondAttribute="bottom" id="l6u-0o-AWt"/>
                                    <constraint firstItem="o3t-a9-OmR" firstAttribute="top" secondItem="NAd-33-eyp" secondAttribute="top" constant="8" id="xN3-bC-glB"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="NAd-33-eyp" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="2" id="0Vq-ps-3Vb"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NAd-33-eyp" secondAttribute="trailing" id="LJI-io-wbN"/>
                            <constraint firstItem="NAd-33-eyp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="MRr-Ao-uQc"/>
                            <constraint firstItem="NAd-33-eyp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="S0z-cc-woD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="addOptionBtn" destination="o3t-a9-OmR" id="YA4-Tb-d0N"/>
                        <outlet property="optionTableView" destination="PB3-B1-e8w" id="eS1-JB-4lu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
        </scene>
        <!--Wheel View Controller-->
        <scene sceneID="Ywi-la-Y6S">
            <objects>
                <viewController id="41S-i6-0pa" customClass="WheelViewController" customModule="WheelyApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="SbK-it-f1i">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VdZ-et-Sm7">
                                <rect key="frame" x="44" y="275" width="327" height="292"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIc-Ri-2hi">
                                <rect key="frame" x="14" y="752" width="380" height="56"/>
                                <color key="backgroundColor" red="0.3425145745" green="0.1302860975" blue="0.0351851657" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="Zcw-4r-ZVV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                <state key="normal" title="Spin">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="spinClicked:" destination="41S-i6-0pa" eventType="touchUpInside" id="Xzc-gZ-I5g"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="p9g-Yc-0uA" firstAttribute="bottom" secondItem="vIc-Ri-2hi" secondAttribute="bottom" id="XDT-zb-biA"/>
                            <constraint firstItem="vIc-Ri-2hi" firstAttribute="leading" secondItem="p9g-Yc-0uA" secondAttribute="leading" constant="14" id="lPi-Nn-N1m"/>
                            <constraint firstItem="p9g-Yc-0uA" firstAttribute="trailing" secondItem="vIc-Ri-2hi" secondAttribute="trailing" constant="20" id="sOi-1e-OgF"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="p9g-Yc-0uA"/>
                    </view>
                    <navigationItem key="navigationItem" id="zsh-42-BoX"/>
                    <connections>
                        <outlet property="containerView" destination="VdZ-et-Sm7" id="iFi-gc-QDk"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="OZ0-ue-3Mx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="869.56521739130437" y="146.65178571428569"/>
        </scene>
    </scenes>
</document>
